Added in initial handlers for Annotations within the controller